# docfmt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
tests/data/: data1.toml  data2.json
tests/output/: main.md
tests/templates/: config.toml  file.hbs  main.hbs
