[package]
name = "docfmt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/docfmt"
repository = "https://github.com/typedduck/docfmt"
description = "A documentation formatter using Handlebars templates"
categories = ["command-line-utilities", "text-processing"]
keywords = ["documentation", "formatting", "handlebars", "templates"]
readme = "README.md"
include = [
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
    "Cargo.toml",
    "/src",
    "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
handlebars = "4.4.0"
log = { version = "0.4.20", features = [
    "std",
    "release_max_level_info",
    "max_level_debug",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
stderrlog = "0.5.4"
thiserror = "1.0.50"
toml = "0.8.6"
walkdir = "2.4.0"
